<resources>
    <string name="app_name">What Politics?</string>
    <string name="parties">Parties</string>
    <string name="partiesPageDescription">Here you\'ll find a description of the parties across the UK and ones which are specific to each country.</string>
    <string name="historyDescription">Here you will find out about the way we vote in the UK and the history behind the UK\'s political system. </string>
    <string name="conservativeTitle">Conservative Party</string>
    <string name="labourTitle">Labour Party</string>
    <string name="conservativeLeader">Leader: Theresa May</string>
    <string name="labourLeader">Leader: Jeremy Corbyn</string>
    <string name="voting"><strong>First-Past-The-Post\n--------------------------------------\n</strong>This is the system used in the UK to elect new prime ministers and members of parliament in the general elections.\n The UK is divided into equally sized areas, each of which with a representative for each party (although some smaller parties may not have enough candidates to have a representative in each constituency). The equal sizing means that each voter has a roughly equal say.
Inhabitants of each constituency, of which there are 650, vote for a single candidate in their area to elect them and give them a place in the House of Commons, called a seat. \n Each voter votes for a candidate that represents the party that they wish to vote for. That representative gains a seat in the House of Commons for their party. This uses the majority, and, as such, may result in coalitions if no parties gain above 50% of the votes.\n
</string>
    <string name="conservativeManifesto">Click here for the Conservative Manifesto.</string>
    <string name="labourManifesto">Click here for the Labour Manifesto.</string>
    <string name="conPolicyList">
        • Spend 2% of GDP on the military - with further increases over time.\n
    </string>
    <string name="libdemTitle">Liberal Democrat</string>
    <string name="lbdemLeader">Leader: Vince Cable</string>
    <string name="libdemManifesto">Click here for the Liberal Democrat Manifesto.</string>
    <string name="greenTitle">Green</string>
    <string name="UKIPTitle">UKIP</string>
    <string name="tutorial">Tap ← to head to information on political parties in the United Kingdom. \n \nTap on → to head to information on how we vote in the UK and also some information on the history of the political system.\n \nTap on this arrow ↓ to see articles on current issues and political events. \n\nTap on the logo above to open the navigation page, from hear you can head to the different sections within the app.</string>
    <string name="conservativePrinciples">• Strength and stability - A good economy needs to be reliable. \n • Meritocracy - People who work hard should see the benefits. </string>
    <string name="conservativePolicies">• Increase military spending. \n • Reduce taxes. \n • Simplify regulations to save money. \n • Encourage trade by making agreements to replace what we had in the EU.</string>
    <string name="labourPrinciples">• Fairness \n • Security - People should be confident in the things they rely on.</string>
</resources>
